--- a/README.adoc
+++ b/README.adoc
@@ -29,5 +29,11 @@ Username/Password: `admin`/`admin`
 fly -t test login --concourse-url http://192.168.50.10:8080
 
 [source,shell]
-fly -t test sp -p test -c pipelines/pipeline.yml
+fly -t test sp -p test -c pipelines/pipeline.yml -n
+fly -t test unpause-pipeline -p test
 
+
+== Remove Pipelines
+
+[source,shell]
+fly -t test dp -p test -n
